@@ -116,6 +116,8 @@ php_apache_sapi_header_handler(sapi_header_struct *sapi_header, sapi_headers_str
 
 	if (!strcasecmp(sapi_header->header, "content-type"))
 		ctx->r->content_type = apr_pstrdup(ctx->r->pool, val);
+	else if (!strcasecmp(sapi_header->header, "content-length"))
+		ap_set_content_length(ctx->r, strtol(val, (char **)NULL, 10));
 	else if (sapi_header->replace)
 		apr_table_set(ctx->r->headers_out, sapi_header->header, val);
 	else
